# UrbanNav

./: .gitignore  README.md  carla_env.py  compare_features.py  distill.py  environment.yml  export_carla_navmesh.py  filter_episodes.py  fine_tune.py  flow_matching_policy.py  generate_scenarios.py  mpc.py  plot_perturbation_sweep.py  policy.py  precompute_features.py  reward_model.py  rl_trainer.py  test.py  test_carla.py  train.py  traversability_filter.py  validate.py  vis_utils.py  visualize_features.py  visualize_navmesh_cache.py  visualize_scenarios.py
analysis/: linear_probe.py  probe_res.txt
carla_utils/: tf.py
citywalker_eval/: __init__.py  env.py  planning.py  policy.py  run_test.py
config/: __init__.py  carla_feat.yaml  carla_feat_distill.yaml  carla_feat_distill_simple.yaml  carla_feat_simple.yaml  distill.yaml  finetune.yaml  goal_agnostic.yaml  goal_agnostic_crop.yaml  goal_agnostic_fm.yaml  goal_agnostic_test.yaml  rl.yaml  rl_baseline.yaml  urban_nav.yaml  urban_nav_feat.yaml  utils.py  youtube_filtered_feat.yaml
data/: camera_utils.py  carla_dataset.py  carla_feat_dataset.py  citywalk_dataset.py  citywalk_dataset_crop.py  citywalk_feat_dataset.py  filtered_feat_dataset.py  mixture_sampler.py  sensors.json
dataset/: download.sh  download_youtube_videos.py
detour_nav/: CMakeLists.txt  build.sh
detour_nav/src/: bindings.cpp  detour_pathfinder.h
flow_matching_test/: dataset_v2.py  dataset_v3.py  dataset_v4.py  model.py  model_otcfm.py  sweep.py  train_v4.py
model/: citywalker.py  citywalker.py.bak  citywalker_feat.py  flow_matching.py  (+6 more)
(+76 files in other folders)
